--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
+body {
+    background: rgb(0 0 0);
+    color: rgb(255 255 255);
+    font-family: Inter, sans-serif;
+    height: 100vh;
+    margin: 0;
+    overflow-x: hidden;
+    width: 100vw;
+}
