--- a/src/app/features/presentation-definition/components/home/home.component.scss
+++ b/src/app/features/presentation-definition/components/home/home.component.scss
@@ -46,6 +46,7 @@
                 display: flex;
                 flex-flow: row wrap;
                 justify-content: center;
+                align-items: flex-start;
             }
 
             .vc-box-bottom {
