--- a/src/app/features/presentation-definition/components/verifiable-credential/verifiable-credential.component.scss
+++ b/src/app/features/presentation-definition/components/verifiable-credential/verifiable-credential.component.scss
@@ -1,12 +1,49 @@
 :host {
-  .vc-verifiable-credential {
-    display: flex;
-    margin: 0 50px;
-    flex-direction: column;
-    align-items: center;
-    position: relative;
-    background: linear-gradient(90.09deg, rgb(204, 210, 220) 16.25%, rgb(218, 223, 232) 40.42%, rgb(218, 223, 232) 100%);
-    border-radius: 16px;
-    height: 640px;
-  }
+    .vc-verifiable-credential {
+        align-items: center;
+        background: linear-gradient(90.09deg, rgb(204 210 220) 16.25%, rgb(218 223 232) 40.42%, rgb(218 223 232) 100%);
+        border-radius: 16px;
+        display: flex;
+        flex-direction: column;
+        height: 640px;
+        margin: 0 50px;
+        position: relative;
+
+        .body {
+            align-items: center;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+
+            .qr-code {
+                background: rgb(255 255 255);
+                border-radius: 30px;
+                -webkit-box-pack: center;
+                display: flex;
+                height: 256px;
+                justify-content: center;
+                margin-top: 40px;
+                padding: 15px;
+                width: 256px;
+            }
+
+            .vc-obtain-container vc-button {
+                width: 256px;
+            }
+
+            .vc-display-jwt {
+                vc-editor {
+                    display: inline;
+                    height: 516px;
+                    max-width: 562px;
+                    min-height: 234px;
+                    min-width: 400px;
+                }
+            }
+        }
+
+        &.view-json {
+            background: linear-gradient(90.09deg, rgb(50 54 57) 16.25%, rgb(50 54 57) 40.42%, rgb(50 54 57) 100%);
+        }
+    }
 }
