--- a/src/app/shared/elements/button/button.component.html
+++ b/src/app/shared/elements/button/button.component.html
@@ -1,3 +1,2 @@
 
-<button [disabled]="isDisabled" (click)="click()" type="button">{{name}}</button>
-
+<button [disabled]="isDisabled" (click)="click()" type="button" [ngClass]="color">{{buttonName}}</button>
