--- a/src/app/shared/elements/button/button.component.scss
+++ b/src/app/shared/elements/button/button.component.scss
@@ -7,7 +7,6 @@
             pointer-events: none;
         }
 
-        background: rgb(99 93 255);
         border: 0;
         border-radius: 8px;
         color: rgb(255 255 255);
@@ -20,10 +19,19 @@
         letter-spacing: -0.01px;
         line-height: 24px;
         margin-top: 16px;
+        padding: 1rem;
         transition: background 225ms ease-in-out 0s;
         user-select: none;
         width: inherit;
 
+        &.primary {
+            background: rgb(99 93 255);
+        }
+
+        &.white {
+            background: rgb(255 255 255);
+            color: rgb(0 0 0);
+        }
     }
 
 }
