--- a/src/app/shared/elements/editor/editor.component.scss
+++ b/src/app/shared/elements/editor/editor.component.scss
@@ -2,14 +2,14 @@
     .vc-container-editor {
         background-color: rgb(40 44 52);
         border-radius: 16px;
-        height: 608px;
-        min-height: 340px;
-        min-width: 400px;
-        max-width: 600px;
-        width: 100%;
+        height: inherit;
+        max-width: inherit;
+        min-height: inherit;
+        min-width: inherit;
         overflow-y: scroll;
         padding: 16px;
         position: relative;
+        width: 100%;
 
         textarea {
             height: 100%;
