fix: change the color of values, add button for copy to clipboard

--- a/src/app/features/presentation-definition/components/verifiable-credential/verifiable-credential.component.html
+++ b/src/app/features/presentation-definition/components/verifiable-credential/verifiable-credential.component.html
@@ -8,10 +8,10 @@
             <div *ngIf="!requestGenerate" id="qrcode" > </div>
         </div>
         <div class="vc-obtain-container" *ngIf="(presentationDefinition?.request_uri && !requestGenerate) && !displayButtonJWTObject">
-        <vc-button name="Click here to continue"  mode="none" color="white" (clicked)="obtainCredential()"></vc-button>
+        <vc-button name="Display Object"  mode="none" color="white" (clicked)="obtainCredential()"></vc-button>
+        <vc-button name="Copy to Clipboard"  mode="none" color="white" (clicked)="copyToClipboard()"></vc-button>
       </div>
       <div class="vc-display-jwt" *ngIf="!requestGenerate">
-        <vc-button *ngIf="displayButtonJWTObject && !displayJWTObject" name="Show JWT Object" mode="none" color="white" (clicked)="showJwtObject()"></vc-button>
         <vc-editor *ngIf="displayJWTObject" [code]="JwtObject"></vc-editor>
       </div>
   </div>
