--- a/src/app/features/presentation-definition/components/verifiable-credential/verifiable-credential.component.scss
+++ b/src/app/features/presentation-definition/components/verifiable-credential/verifiable-credential.component.scss
@@ -27,10 +27,13 @@
                 width: 256px;
             }
 
-            .vc-obtain-container vc-button {
+            .vc-obtain-container {
+              display: flex;
+              flex-direction: column;
+              vc-button {
                 width: 256px;
+              }
             }
-
             .vc-display-jwt {
                 vc-editor {
                     display: inline;
