--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,6 +8,16 @@ body {
     overflow-x: hidden;
     width: 100vw;
 }
+main {
+  width: 100vw;
+  height: 100vh;
+  padding: 0;
+  margin: 0;
+  overflow: hidden;
+}
 .ͼe {
   color: #9af3b1 !important;
 }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
