--- a/src/app/features/home/components/home/home.component.html
+++ b/src/app/features/home/components/home/home.component.html
@@ -1,6 +1,15 @@
-<div class="container">
+<!-- <div class="container">
   <vc-radio-group [options]="options" (choseEvent)="navigate($event)"></vc-radio-group>
   <div class="submit">
-    <vc-button name="Start the test" mode="none" (clicked)="submit()"></vc-button>
+    <vc-button name="Start the test" mode="none" [isDisabled]="disableButton" (clicked)="submit()"></vc-button>
   </div>
-</div>
+</div> -->
+<vc-layout>
+  <h2 title>Choose an authentication method</h2>
+  <div body class="container">
+    <vc-radio-group [options]="options" (choseEvent)="navigate($event)"></vc-radio-group>
+    <div class="submit">
+      <vc-button name="Start the test" mode="none" [isDisabled]="disableButton" (clicked)="submit()"></vc-button>
+    </div>
+  </div>
+</vc-layout>
