--- a/src/app/shared/elements/radio-group/radio-group.component.html
+++ b/src/app/shared/elements/radio-group/radio-group.component.html
@@ -1,10 +1,9 @@
 <div class="container">
-  <label class="radio-group-label" id="radio-group-label">Choose an authentication method</label>
   <mat-radio-group
     aria-labelledby="radio-group-label"
     class="radio-group"
     [(ngModel)]="chose" (change)="selected()">
-    <mat-radio-button class="radio-button" *ngFor="let option of options" [value]="option.key">
+    <mat-radio-button class="radio-button" *ngFor="let option of options" [value]="option.key" [disabled]="option.isDisabled">
       {{option.value}}
     </mat-radio-button>
   </mat-radio-group>
