fix QRCode data, set timeout to 120 sec EUDIW-524, EUDIW-523

--- a/src/app/core/layout/layout/layout.component.html
+++ b/src/app/core/layout/layout/layout.component.html
@@ -2,7 +2,7 @@
   <div class="vc-box">
     <div class="vc-title">
       <ng-content select="[title]"></ng-content>
-      <div class="arrow-back">
+      <div *ngIf="showBackButton" class="arrow-back">
         <mat-icon aria-hidden="false" fontIcon="arrow_back" (click)="goBack()"></mat-icon>
       </div>
     </div>
