--- a/src/app/features/presentation-definition/components/home/home.component.html
+++ b/src/app/features/presentation-definition/components/home/home.component.html
@@ -16,4 +16,4 @@
       <vc-button name="Generate code" [mode]="buttonMode" [isDisabled]="!requestCode" color="primary" (clicked)="generateCode()"></vc-button>
     </div>
   </div>
-</div>
+</div>8
