fix: radio buttons fonts

--- a/src/app/shared/elements/radio-group/radio-group.component.scss
+++ b/src/app/shared/elements/radio-group/radio-group.component.scss
@@ -11,7 +11,7 @@
             margin: 15px 0;
         }
 
-        .radio-group-label {
+        ::ng-deep .radio-button label {
             color: #000000de;
         }
 
