--- a/src/styles.scss
+++ b/src/styles.scss
@@ -26,3 +26,6 @@ body { font-family: Roboto, "Helvetica Neue", sans-serif; margin: 0; }
 
 html, body { height: 100%; }
 body { font-family: Roboto, "Helvetica Neue", sans-serif; margin: 0; }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
