--- a/src/app/features/verifiable-credential/components/qr-code/qr-code.component.scss
+++ b/src/app/features/verifiable-credential/components/qr-code/qr-code.component.scss
@@ -29,6 +29,19 @@
                 &.green-bg {
                     background: green;
                 }
+                .cbor-show-result {
+                  margin-top: -64px;
+                  h2 {
+                    margin: 4px 2px;
+                  }
+                  vc-editor {
+                    height: 464px;
+                    min-width: 471px;
+                    overflow-y: scroll;
+                    overflow-x: scroll;
+                  }
+
+                }
             }
 
             .vc-obtain-container {
