--- a/src/app/features/siop-custom/components/create-a-scenario/create-a-scenario.component.html
+++ b/src/app/features/siop-custom/components/create-a-scenario/create-a-scenario.component.html
@@ -1,12 +1,9 @@
 <div class="creation">
     <h3>Select the information requested from the user</h3>
-    <div class="vc-box-bottom">
-      <vc-button [isDisabled]="definitionFields.length === 0" [mode]="buttonMode" name="Generate code" color="primary" (clicked)="generateCode()"></vc-button>
-    </div>
     <div>
       <ng-container  *ngFor="let field of fields; index as idx; trackBy: trackByFn" >
         <div class="controls">
-          <mat-checkbox (click)="handle(field)" color="primary">
+          <mat-checkbox (click)="handel(field)" color="primary">
             {{field.label}}
           </mat-checkbox>
         </div>
@@ -21,5 +18,7 @@
       </mat-expansion-panel-header>
       <vc-editor [code]="definitionText"></vc-editor>
     </mat-expansion-panel>
-
+    <div class="vc-box-bottom">
+      <vc-button [isDisabled]="definitionFields.length === 0" [mode]="buttonMode" name="Generate code" color="primary" (clicked)="generateCode()"></vc-button>
+    </div>
 </div>
