--- a/src/app/features/siop-custom/components/create-a-scenario/create-a-scenario.component.scss
+++ b/src/app/features/siop-custom/components/create-a-scenario/create-a-scenario.component.scss
@@ -1,4 +1,5 @@
 :host {
+  max-width: 40rem;
   ::ng-deep {
     .mat-mdc-checkbox .mdc-form-field {
         color: var(--mdc-theme-text-primary-on-background, rgba(255, 255, 255, 0.87));
@@ -29,5 +30,8 @@
     .presentation-definition {
       margin-top: 1rem;
     }
+  }
+  vc-button {
+    width: 100%;
   }
 }
