--- a/src/app/features/verifiable-credential/components/qr-code/qr-code.component.scss
+++ b/src/app/features/verifiable-credential/components/qr-code/qr-code.component.scss
@@ -31,7 +31,7 @@
               max-height: -moz-fit-content;
               max-height: fit-content;
 
-                .cbor-show-result {
+                .show-result {
                   // margin-top: -64px;
                   h2 {
                     margin: 4px 2px;
