DEV: add a new UI template

--- a/src/app/features/home/components/home/home.component.html
+++ b/src/app/features/home/components/home/home.component.html
@@ -1,9 +1,7 @@
-<vc-layout>
-  <h2 title>Choose an authentication method</h2>
+<vc-wallet-layout>
   <div body class="container">
+    <h5 body-title >Choose an authentication method</h5>
     <vc-radio-group [options]="options" (choseEvent)="navigate($event)"></vc-radio-group>
-    <div class="submit">
-      <vc-button name="Start the test" mode="none" [isDisabled]="disableButton" (clicked)="submit()"></vc-button>
-    </div>
+    <vc-body-actions [actions]="actions" (clicked)="submit()"></vc-body-actions>
   </div>
-</vc-layout>
+</vc-wallet-layout>
