--- a/src/app/features/home/components/home/home.component.scss
+++ b/src/app/features/home/components/home/home.component.scss
@@ -1,29 +1,6 @@
+@use '/src/template' as temp;
 :host {
-    align-items: center;
-    display: flex;
-    flex-direction: row;
-    height: 100%;
-    justify-content: center;
-
     .container {
-        background-color: rgb(246 247 250);
-        border-radius: 15px;
-        display: flex;
-        flex-direction: column;
-        height: 979px;
-        max-height: 694px;
-        max-width: 375px;
-        min-height: 400px;
-        padding: 15px;
-        position: relative;
-        width: 100vw;
-
-        .submit {
-            align-items: center;
-            display: flex;
-            flex-flow: column wrap;
-            justify-content: center;
-            width: 100%;
-        }
+        max-width: temp.$max-body-panel;
     }
 }
