DEV: changes for the CBOR, CBOR selectable, and QR code pages

--- a/src/app/features/presentation-definition/components/presentation-request/presentation-request.component.html
+++ b/src/app/features/presentation-definition/components/presentation-request/presentation-request.component.html
@@ -1,1 +1,6 @@
+
+<h6>Create a Presentation Definition</h6>
 <vc-editor (editable)="false" (request)="onRequest($event)"></vc-editor>
+<div *ngIf="!invalidJSON" class="vc-box-display-error">
+  <p>Invalid JSON Format</p>
+</div>
