--- a/src/app/shared/elements/radio-group/radio-group.component.html
+++ b/src/app/shared/elements/radio-group/radio-group.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container bg-panel">
   <mat-radio-group
     aria-labelledby="radio-group-label"
     class="radio-group"
