--- a/src/app/shared/elements/radio-group/radio-group.component.scss
+++ b/src/app/shared/elements/radio-group/radio-group.component.scss
@@ -4,19 +4,14 @@
         display: flex;
         flex-direction: column;
         position: relative;
-        background-color: map-get(map-get(map-get(temp.$palette, general), bg), default);
-        border-radius: 16px;
+        min-width: 25rem;
+
         .radio-group {
             align-items: flex-start;
             display: flex;
             flex-direction: column;
             margin: 15px 0;
         }
-
-        ::ng-deep .radio-button label {
-            color: #000000de;
-        }
-
         .radio-button {
             margin: 5px;
         }
