--- a/src/template.scss
+++ b/src/template.scss
@@ -43,6 +43,7 @@ $backgroundDefault: map-get(map-get(map-get($palette, general), bg), default);
 $backgroundPaper: map-get(map-get(map-get($palette, general), bg), paper);
 $textDarkSecondary: map-get(map-get(map-get(map-get($palette, general), text), secondary), dark);
 $textDarkPrimary: map-get(map-get(map-get(map-get($palette, general), text), primary), dark);
+$dividerDark: map-get(map-get(map-get($palette, general), divider), dark);
 
 $left: 31%;
 $max-body-panel: 34.375em;
@@ -52,6 +53,7 @@ $min-body-width: 21.875rem;
 $min-body-height: 21.875rem;
 
 $body-height: 34.25rem;
+$body-width: 35rem;
 
 h1, h2, h3, h4, h5, h6 {
   color: map-get(map-get(map-get(map-get($palette, general), text), primary), dark);
