--- a/src/app/features/verifiable-credential/components/qr-code/qr-code.component.scss
+++ b/src/app/features/verifiable-credential/components/qr-code/qr-code.component.scss
@@ -11,7 +11,7 @@
           display: flex;
           flex-direction: row;
           justify-content: center;
-
+          width: 100%;
             .qr-code {
               -webkit-box-pack: center;
               display: flex;
@@ -21,6 +21,7 @@
               height: fit-content;
               max-height: temp.$body-height;
               overflow-y: auto;
+              width: 100%;
             }
             .qr-info {
               display: flex;
