--- a/src/app/shared/elements/button/button.component.scss
+++ b/src/app/shared/elements/button/button.component.scss
@@ -25,8 +25,12 @@
         }
 
         &.secondary {
-            background: map-get(map-get(temp.$palette, color), secondary);
+            background: temp.$backgroundPaper;
             color: rgb(0 0 0);
+            border: 1px;
+            border-radius: 1em;
+            border-style: solid;
+            border-color: temp.$dividerDark;
         }
     }
 
