--- a/src/app/shared/elements/editor/editor.component.scss
+++ b/src/app/shared/elements/editor/editor.component.scss
@@ -11,6 +11,7 @@
         overflow-x: auto;
         padding: 16px;
         position: relative;
+        width: temp.$body-width;
 
         textarea {
             height: 100%;
