--- a/src/app/core/layout/wallet-layout/wallet-layout-header/wallet-layout-header.component.scss
+++ b/src/app/core/layout/wallet-layout/wallet-layout-header/wallet-layout-header.component.scss
@@ -1,4 +1,3 @@
-@use 'sass:map';
 @use '/src/template' as temp;
 @use '/src/layout-breakpoint' as points;
 :host {
@@ -7,14 +6,29 @@
   border-bottom: 1px;
   border-color: map-get(map-get(map-get(temp.$palette, general), divider), dark);
   border-style: solid;
+  border-top: none;
   display: flex;
+  align-items: center;
   img {
     left: temp.$left;
     position: relative;
+    padding: temp.$spaceBasic;
+    cursor: pointer;
+  }
+
+  @media (max-width: map-get(points.$breakpoints, xs)) and  (min-width: map-get(points.$breakpoints, sm)){
+    img {
+      left: 3%;
+    }
   }
   @media (max-width: map-get(points.$breakpoints, sm)) {
     img {
       left: 3%;
+    }
+  }
+  @media (max-width: map-get(points.$breakpoints, md)) and (min-width: map-get(points.$breakpoints, sm)){
+    img {
+      left: 15%;
     }
   }
 }
