--- a/src/app/core/layout/wallet-layout/wallet-layout.component.scss
+++ b/src/app/core/layout/wallet-layout/wallet-layout.component.scss
@@ -1,4 +1,5 @@
 @use '/src/template' as temp;
+@use '/src/layout-breakpoint' as points;
 :host {
   width: 100vw;
   height: 100vh;
@@ -8,5 +9,21 @@
     left: temp.$left;
     position: relative;
     width: fit-content;
+  }
+
+  @media (max-width: map-get(points.$breakpoints, xs)) and  (min-width: map-get(points.$breakpoints, sm)){
+    .body {
+      left: 3%;
+    }
+  }
+  @media (max-width: map-get(points.$breakpoints, sm)) {
+    .body {
+      left: 3%;
+    }
+  }
+  @media (max-width: map-get(points.$breakpoints, md)) and (min-width: map-get(points.$breakpoints, sm)){
+    .body {
+      left: 15%;
+    }
   }
 }
