--- a/src/app/features/siop-custom/components/create-a-scenario/create-a-scenario.component.scss
+++ b/src/app/features/siop-custom/components/create-a-scenario/create-a-scenario.component.scss
@@ -1,4 +1,5 @@
 @use '/src/template' as temp;
+@use '/src//layout-breakpoint' as points;
 :host {
   max-width: 40rem;
   ::ng-deep {
@@ -47,4 +48,18 @@
       margin-top: 1rem;
     }
   }
+
+  @media (max-width: map-get(points.$breakpoints, xs)) and  (min-width: map-get(points.$breakpoints, sm)){
+    .creation {
+      width: temp.$body-width-xs;
+      height: 24.25rem;
+    }
+  }
+  @media (max-width: map-get(points.$breakpoints, sm)) {
+    .creation {
+      width: temp.$body-width-sm;
+      height: 24.25rem;
+    }
+  }
+
 }
