--- a/src/app/shared/elements/radio-group/radio-group.component.scss
+++ b/src/app/shared/elements/radio-group/radio-group.component.scss
@@ -1,10 +1,11 @@
 @use '/src/template' as temp;
+@use '/src/layout-breakpoint' as points;
 :host {
     .container {
         display: flex;
         flex-direction: column;
         position: relative;
-        min-width: 25rem;
+        min-width: temp.$min-body-width;
 
         .radio-group {
             align-items: flex-start;
@@ -15,5 +16,22 @@
         .radio-button {
             margin: 5px;
         }
+    }
+    @media (max-width: map-get(points.$breakpoints, xs)) and  (min-width: map-get(points.$breakpoints, sm)){
+      .container {
+        width: temp.$body-width-xs;
+        min-width: temp.$body-width-xs;
+      }
+    }
+    @media (max-width: map-get(points.$breakpoints, sm)) {
+      .container {
+        width: temp.$body-width-sm;
+        min-width: temp.$body-width-sm;
+      }
+    }
+    @media (max-width: map-get(points.$breakpoints, md)) and (min-width: map-get(points.$breakpoints, sm)){
+      .container {
+        width: temp.$body-width-md;
+      }
     }
 }
